@@ -1,3 +1,13 @@
+Thu Oct 21 11:10:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/ACE.cpp:
+        * ace/FILE_IO.h:
+        * ace/Free_List.h:
+        * ace/Handle_Set.h:
+        * ace/Log_Msg.h:
+        * ace/WIN32_Asynch_IO.h:
+          Doxygen changes
+
 Wed Oct 20 18:19:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/fuzz.pl:
